Create a persistence generator once per pool.
Refs #111785